fix: Railway CORSエラーとPACSサンプル同梱
RailwayドメインをCORS許可。フォームは同一オリジン相対パスでPOST。本番DockerfileにPACS_EXPORT_SAMPLEを同梱し起動時自動取り込み。

Co-authored-by: Cursor <cursoragent@cursor.com>